[gd_scene load_steps=13 format=3 uid="uid://yvg3rnxn2nf6"]

[ext_resource type="Script" uid="uid://dd50d3phpchv1" path="res://scripts/poison_pw_azul.gd" id="1_ppwgd"]
[ext_resource type="Texture2D" uid="uid://cwadcu777kp11" path="res://n_assets/Mini FX, Items & UI/Effects/Bright_Sparkle (16 x 16).png" id="2_lga73"]
[ext_resource type="Texture2D" uid="uid://4adv754n6i8k" path="res://n_assets/n_scenes/elements/blue_poison.png" id="3_ggvsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v34kk"]
atlas = ExtResource("2_lga73")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcci3"]
atlas = ExtResource("2_lga73")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcds0"]
atlas = ExtResource("2_lga73")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5gy"]
atlas = ExtResource("2_lga73")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggvsa"]
atlas = ExtResource("3_ggvsa")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lga73"]
atlas = ExtResource("3_ggvsa")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiig0"]
atlas = ExtResource("3_ggvsa")
region = Rect2(96, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_akjbj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v34kk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcci3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcds0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5gy")
}],
"loop": false,
"name": &"collect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggvsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lga73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiig0")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2d2mm"]
size = Vector2(8, 6)

[node name="blue_poison" type="Node2D"]

[node name="blue_poison" type="Area2D" parent="."]
collision_layer = 512
script = ExtResource("1_ppwgd")

[node name="amination_life" type="AnimatedSprite2D" parent="blue_poison"]
scale = Vector2(0.41666666, 0.39999998)
sprite_frames = SubResource("SpriteFrames_akjbj")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.68624705

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue_poison"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_2d2mm")

[connection signal="body_shape_entered" from="blue_poison" to="blue_poison" method="_on_body_shape_entered"]
[connection signal="animation_finished" from="blue_poison/amination_life" to="blue_poison" method="_on_amination_life_animation_finished"]
